--- a/polo-master/polo-master/HTML/index.html
+++ b/polo-master/polo-master/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>P O L O - Showcase Your App</title>
+	<title>A D E L I N - Testing</title>
 
 	<!-- meta -->
 	<meta charset="utf-8">
@@ -19,14 +19,6 @@
 	<!-- fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700|Oxygen:400,300,700' rel='stylesheet'>
 
-	<!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!--[if lt IE 9]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 </head>
 <body id="home">
 
@@ -40,10 +32,8 @@
 		<a id="menu-close" href="#" class="close-btn toggle"><i class="ion-ios-close-empty"></i></a>
 	    <ul class="sidebar-nav">
 		    <li><a href="#home">Home</a></li>
-			<li><a href="#features">Features</a></li>
 			<li><a href="#gallery">Gallery</a></li>
-			<li><a href="#team">Development Team</a></li>
-			<li><a href="#testimonial">Precious Reviews</a></li>
+			<li><a href="#testimonial">About</a></li>
 			<li><a href="#contact">Contact us</a></li>
 	    </ul>
 	</nav>
@@ -53,7 +43,7 @@
 	<header class="sticky" id="header">
 		<section class="container">
 			<section class="row" id="logo_menu">
-				<section class="col-xs-6"><a class="logo" href="">P O L O</a></section>
+				<section class="col-xs-6"><a class="logo" href="">F C  B A R C E L O N A</a></section>
 				<section class="col-xs-6"><a id="menu-toggle" href="#" class="toggle wow rotateIn" data-wow-delay="1s"><i class="ion-navicon"></i></a></section>
 			</section>
 		</section>
