some major changes on design. TODO: fix some design issues and add some dummy text. have fun.

--- a/polo-master/polo-master/HTML/index.html
+++ b/polo-master/polo-master/HTML/index.html
@@ -22,10 +22,6 @@
 </head>
 <body id="home">
 
-	<!-- ****************************** Preloader ************************** -->
-
-	<div id="preloader"></div>
-
 	<!-- ****************************** Sidebar ************************** -->
 
 	<nav id="sidebar-wrapper">
@@ -50,7 +46,6 @@
 	</header>
 
 	<!-- ****************************** Banner ************************** -->
-
 
 	<section id="banner" >
 		<section class="container">
@@ -92,7 +87,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				Features
+				SOME INFO
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -115,7 +110,7 @@
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.3s">
-						<i class="ion-nuclear" style="color:#00ceb8;"></i>
+						<i class="ion-nuclear" style="color:#9C1737;"></i>
 						<h2>Firewall</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
@@ -192,7 +187,7 @@
 						<h1 class="block-title wow animated rollIn">
 							<span class="bb-top-left"></span>
 							<span class="bb-bottom-left"></span>
-							Development Team
+							Trophies
 							<span class="bb-top-right"></span>
 							<span class="bb-bottom-right"></span>
 						</h1>
@@ -297,7 +292,7 @@
 										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 									</p>
 									<p class="client-name">
-										Shahjahan Jewel
+										The Anonymus Guy which maybe do not exists
 									</p>
 								</div>
 							</div>
@@ -321,7 +316,7 @@
 										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 									</p>
 									<p class="client-name">
-										Shahjahan Jewel
+										Anonymus Someone
 									</p>
 								</div>
 							</div>
@@ -345,7 +340,7 @@
 										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 									</p>
 									<p class="client-name">
-										Shahjahan Jewel
+										Also Someone
 									</p>
 								</div>
 							</div>
@@ -369,7 +364,7 @@
 										quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 									</p>
 									<p class="client-name">
-										Shahjahan Jewel
+										Someone
 									</p>
 								</div>
 							</div>
@@ -382,7 +377,7 @@
 
 	<!-- ****************************** Subscribe Section ************************** -->
 
-	<section id="subscribe">
+	<section id="history">
 		<section class="container">
 			<section class="row">
 				<div class="col-sm-10 col-sm-offset-1">
@@ -399,18 +394,7 @@
 			<section class="row">
 				<div class="col-sm-12">
 					<div class="row">
-						<form role="form">
-							<div class="col-xs-10">
-								<div class="form-group">
-									<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-								</div>
-							</div>
-							<div class="col-xs-2">
-								<button type="submit" class="btn-custom">
-								<i class="ion-ios-arrow-thin-right"></i>
-								</button>
-							</div>
-						</form>
+						<!--History & co text right here-->
 					</div>
 				</div>
 			</section>
@@ -435,10 +419,10 @@
 				<div class="container">
 					<div class="col-sm-12">
 						<ul class="address-list">
-							<li><i class="ion-ios-location" style="background-color: rgb(255, 102, 0);"></i> <span>1537 Flint Street <br>Tumon, MP 96911</span></li>
-							<li><i class="ion-ios-telephone" style="background-color: #63cfea;"></i> <span>670-898-2847 </span></li>
-							<li><i class="ion-email" style="background-color: #6ecba9;"></i> <span>info@domain.com</span></li>
-							<li><i class="ion-earth" style="background-color: #ff6969;"></i> <span>www.themewagon.com</span></li>
+							<li><i class="ion-ios-location" style="background-color: rgb(255, 102, 0);"></i> <span>112 Adress Strees<br>Another strees, Same Number</span></li>
+							<li><i class="ion-ios-telephone" style="background-color: #63cfea;"></i> <span>000-000-000-0000</span></li>
+							<li><i class="ion-email" style="background-color: #6ecba9;"></i> <span>adelin.sofrag@gmail.com</span></li>
+							<li><i class="ion-earth" style="background-color: #ff6969;"></i> <span>www.fcbarcelona.com</span></li>
 						</ul>
 					</div>
 				</div>
@@ -486,11 +470,11 @@
 					<div class="col-sm-6">
 						<span>Theme By</span>
 						<h1 class="footer-logo">
-							<a href="https://themewagon.com/">ThemeWagon</a>
+							<a href="#">A D E L I N</a>
 						</h1>
 					</div>
 					<div class="col-sm-6">
-						<p class="copyright">All &copy; Copyright Reserved 2014</p>
+						<p class="copyright">All &copy; Copyright Reserved 2017</p>
 					</div>
 				</section>
 			</section>
@@ -504,6 +488,6 @@
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/owl.carousel.js"></script>
 	<script src="assets/js/script.js"></script>
-	
+
 </body>
 </html>
