Fix app store and play store buttons. Also, fix iphone_hand image on banner side or what it can be called. TODO: gallery with all team from FCBarcelona.com bla bla, I mean all players to be found on some kind of gallery like on their site.

--- a/polo-master/polo-master/HTML/index.html
+++ b/polo-master/polo-master/HTML/index.html
@@ -53,18 +53,22 @@
 			<section class="row">
 				<div class="col-md-6">
 					<div class="headings">
-						<h1 class="wow animated fadeInDown">It's Amazing</h1>
-						<p class="wow animated fadeInLeft">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+						<h1 class="wow animated fadeInDown">FC Barcelona</h1>
+						<h2 class="wow animated fadeInDown">You'll always be connected to the Barça World on your mobile phone!</h2>
+						<p class="wow animated fadeInLeft">If you're a Barça fan, download the new official FC Barcelona App.
+							With its updated design and improved navigation, the new app is full of new feature to ensure you never miss a single detail of the Barça World!</p>
 						<div class="row">
 							<div class="col-xs-6 col-sm-6 col-md-5">
 								<div>
-									<a href="#" class="polo-btn store wow animated bounceInUp"><i class="ion-social-android"></i> Play Store</a>
-								</div>
+									<a class="highlight-app__button-grid__link" href="https://play.google.com/store/apps/details?id=com.mcentric.mcclient.FCBWorld&amp;hl=en" target="_blank">
+										<img class="app-unit__button__image lazyloaded" data-src="https://pro-cdn-static-fcb.everincloud.com/fcb_theme/figures/boto_google_play.png" alt="Download from Google Play" src="https://pro-cdn-static-fcb.everincloud.com/fcb_theme/figures/boto_google_play.png">
+									</a>								</div>
 							</div>
 							<div class="col-xs-6 col-sm-6 col-md-5">
 								<div>
-									<a href="#" class="polo-btn store wow animated bounceInUp"><i class="ion-social-apple"></i> App Store</a>
-								</div>
+									<a class="highlight-app__button-grid__link" href="https://itunes.apple.com/es/app/fc-barcelona-official-app/id343196080?l=en&amp;ls=1&amp;mt=8" target="_blank">
+										<img class="app-unit__button__image lazyloaded" data-src="https://pro-cdn-static-fcb.everincloud.com/fcb_theme/figures/boto_app_store.png" alt="Download from Apple App Store" src="https://pro-cdn-static-fcb.everincloud.com/fcb_theme/figures/boto_app_store.png">
+									</a>								</div>
 							</div>
 						</div>
 					</div>
@@ -92,7 +96,7 @@
 				<span class="bb-bottom-right"></span>
 				</h1></div>
 			</section>
-			
+
 			<section class="row">
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.3s">
@@ -169,7 +173,7 @@
 					  <div class="item"><img src="assets/img/screenshot-1.png" class="img_res wow animated zoomIn"></div>
 					</div>
 					 <div class="customNavigation">
-					  <a class="btn prev gallery-nav wow animated bounceInLeft"><i class="ion-ios-arrow-left"></i></a> 
+					  <a class="btn prev gallery-nav wow animated bounceInLeft"><i class="ion-ios-arrow-left"></i></a>
 					  <a class="btn next gallery-nav wow animated bounceInRight"><i class="ion-ios-arrow-right"></i></a>
 					</div>
 				</div>
@@ -348,7 +352,7 @@
 						<div class="item">
 							<div class="row">
 								<div class="col-sm-4 col-sm-offset-1">
-									<div class="client-pic"><img class="img_res" src="assets/img/client-one.png"></div> 
+									<div class="client-pic"><img class="img_res" src="assets/img/client-one.png"></div>
 									<p class="review-star">
 										<i class="ion-ios-star"></i>
 										<i class="ion-ios-star"></i>
