--- a/polo-master/polo-master/HTML/index.html
+++ b/polo-master/polo-master/HTML/index.html
@@ -91,7 +91,7 @@
 				<div class="title-box"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left"></span>
 				<span class="bb-bottom-left"></span>
-				SOME INFO
+					Part of our history
 				<span class="bb-top-right"></span>
 				<span class="bb-bottom-right"></span>
 				</h1></div>
@@ -100,44 +100,44 @@
 			<section class="row">
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.3s">
-						<i class="ion-ios-settings" style="color:#9b59b6;"></i>
-						<h2>Tune up</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-ios-settings" style="color:#9b59b6;"></i>-->
+						<h2>2008-16. The best years in our history</h2>
+						<p>Barça delight the world with their brand of football that is appreciated by football fans from all over the world. They win three more Champions League titles in a decade of dominance for the blaugranes</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.3s">
-						<i class="ion-ios-locked-outline" style="color:#d35400;"></i>
-						<h2>Security</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-ios-locked-outline" style="color:#d35400;"></i>-->
+						<h2>1996-08. Barça reaches its century</h2>
+						<p>The centenery celebrations were a demonstration of what Barça means to people, an emotional journey through the Club's history that lasted the whole year.</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.3s">
-						<i class="ion-nuclear" style="color:#9C1737;"></i>
-						<h2>Firewall</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-sport" style="color:#9C1737;"></i>-->
+						<h2>1988-1996. The era of the 'Dream Team'</h2>
+						<p>Johan Cruyff's team win four league titles in a row and lift their first European Cup in 1992. The previous year the handball team had won their first European trophy under coach Valerio Rivera</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.6s">
-						<i class="ion-ios-browsers-outline" style="color:#c0392b;"></i>
-						<h2>HD Widgets</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-ios-browsers-outline" style="color:#c0392b;"></i>-->
+						<h2>1978-1988. More members, more stars</h2>
+						<p>Dream signings arrive in the form of players like Maradona, Schuster, Julio Alberto and Quini as the first lucrative television contracts are signed. The Club continues to grow with the extension of Camp Nou and the landmark figure of 100,000 members is reached</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.6s">
-						<i class="ion-ios-loop" style="color:#27ae60;"></i>
-						<h2>Data Sync</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-ios-loop" style="color:#27ae60;"></i>-->
+						<h2>1969-1978. Cruyff and democracy</h2>
+						<p>The possibility of signing foreign players once more mean that the dream of signing Johan Cruyff became a reality in 1973 with Montal as president. A year later Barça would win 5-0 against Real Madrid in the Santiago Bernabéu</p>
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-4">
 					<div class="feature-box wow animated flipInX" data-wow-delay="0.6s">
-						<i class="ion-ios-glasses" style="color:#2c3e50;"></i>
-						<h2>Customize</h2>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+						<!--<i class="ion-ios-glasses" style="color:#2c3e50;"></i>-->
+						<h2>1961-1969. A new social dimension</h2>
+						<p>The Club increases its membership despite the relative lack of success in the 1960s. On 17 January 1968, president Carreras refers to, for the first time, Barça being 'more than a Club'. Just a few months later comes the tragic death of Julio César Benítez</p>
 					</div>
 				</div>
 			</section>
@@ -153,7 +153,7 @@
 				<div class="title-box" style="color:#fff;"><h1 class="block-title wow animated rollIn">
 				<span class="bb-top-left" style="border-color: #fff; "></span>
 				<span class="bb-bottom-left" style="border-color: #fff; "></span>
-				Gallery
+				Squad
 				<span class="bb-top-right" style="border-color: #fff; "></span>
 				<span class="bb-bottom-right" style="border-color: #fff; "></span>
 				</h1></div>
@@ -162,6 +162,14 @@
 				<div class="col-xs-12">
 					<div id="screenshots" class="owl-carousel owl-theme">
 					  <div class="item"><img src="assets/img/screenshot-1.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-2.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-3.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-4.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-5.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-6.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-7.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-3.png" class="img_res wow animated zoomIn"></div>
+					  <div class="item"><img src="assets/img/screenshot-5.png" class="img_res wow animated zoomIn"></div>
 					  <div class="item"><img src="assets/img/screenshot-2.png" class="img_res wow animated zoomIn"></div>
 					  <div class="item"><img src="assets/img/screenshot-3.png" class="img_res wow animated zoomIn"></div>
 					  <div class="item"><img src="assets/img/screenshot-4.png" class="img_res wow animated zoomIn"></div>
@@ -191,7 +199,7 @@
 						<h1 class="block-title wow animated rollIn">
 							<span class="bb-top-left"></span>
 							<span class="bb-bottom-left"></span>
-							Trophies
+							Gallery
 							<span class="bb-top-right"></span>
 							<span class="bb-bottom-right"></span>
 						</h1>
@@ -202,57 +210,21 @@
 				<section class="col-md-3 col-sm-6">
 					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
 						<img src="assets/img/dev-1.jpg" class="img_res team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s">Rubel Saheb</h2>
-						<p class="wow animated fadeIn" data-wow-delay=="0.7s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<ul class="team-social">
-							<li class="wow animated fadeInLeft facebook"><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li class="wow animated fadeInLeft linkedin"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li class="wow animated fadeInRight googleplus"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
-							<li class="wow animated fadeInRight github"><a href="#"><i class="ion-social-github"></i></a></li>
-						</ul>
 					</div>
 				</section>
 				<section class="col-md-3 col-sm-6">
 					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
 						<img src="assets/img/dev-2.jpg" class="img_res team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s">Rubel Saheb</h2>
-						<p class="wow animated fadeIn" data-wow-delay=="0.7s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<ul class="team-social">
-							<li class="wow animated fadeInLeft facebook"><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li class="wow animated fadeInLeft linkedin"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li class="wow animated fadeInRight googleplus"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
-							<li class="wow animated fadeInRight github"><a href="#"><i class="ion-social-github"></i></a></li>
-						</ul>
 					</div>
 				</section>
 				<section class="col-md-3 col-sm-6">
 					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
 						<img src="assets/img/dev-3.jpg" class="img_res team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s">Rubel Saheb</h2>
-						<p class="wow animated fadeIn" data-wow-delay=="0.7s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<ul class="team-social">
-							<li class="wow animated fadeInLeft facebook"><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li class="wow animated fadeInLeft linkedin"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li class="wow animated fadeInRight googleplus"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
-							<li class="wow animated fadeInRight github"><a href="#"><i class="ion-social-github"></i></a></li>
-						</ul>
 					</div>
 				</section>
 				<section class="col-md-3 col-sm-6">
 					<div class="team-member wow animated fadeIn" data-wow-delay=="0.3s">
 						<img src="assets/img/dev-4.jpg" class="img_res team-pic">
-						<h2 class="wow animated fadeInDown" data-wow-delay=="0.7s">Rubel Saheb</h2>
-						<p class="wow animated fadeIn" data-wow-delay=="0.7s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.</p>
-						<ul class="team-social">
-							<li class="wow animated fadeInLeft facebook"><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li class="wow animated fadeInLeft linkedin"><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li class="wow animated fadeInRight googleplus"><a href="#"><i class="ion-social-googleplus-outline"></i></a></li>
-							<li class="wow animated fadeInRight github"><a href="#"><i class="ion-social-github"></i></a></li>
-						</ul>
 					</div>
 				</section>
 			</section>
